--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,28 +1,60 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 10px;
-    width: 250px;
-  }
-  h3 {
-    margin-bottom: 10px;
-  }
-  label {
-    display: block;
-    margin: 5px 0;
-  }
-  button {
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #45a049;
-  }
-  select {
-    width: 100%;
-    padding: 5px;
-    margin: 5px 0;
-  }
+  font-family: Verdana, sans-serif;
+  margin: 10px;
+  width: 300px;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin: 5px 0;
+  text-align: start;
+  text-overflow: ellipsis;
+  width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-transform: capitalize;
+  font-size: 1.15em;
+  font-weight: normal;
+  
+}
+
+button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-save {
+  background-color: #4268af;
+}
+
+.btn-save:hover {
+  background-color: #88a0cc;
+}
+
+.btn-load {
+  background-color: #4CAF50;
+}
+
+.btn-load:hover {
+  background-color: #92d194;
+}
+
+select {
+  width: 100%;
+  padding: 5px;
+  margin: 5px 0;
+}
+
+#tabs-list {
+  overflow-y: auto;
+  max-height: 250px;
+  overflow-x: hidden;
+}
